# PythonCppInteraction

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.cmd  conanfile.txt
app/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  file.grpc.pb.cc  file.grpc.pb.h  file.pb.cc  file.pb.h  file.proto  main.cpp
pybind11_lib/: CMakeLists.txt  pybind11_wrapper.cpp
python_src/: example.pyd  file_pb2.py  file_pb2_grpc.py  pybind11_test.py  tester_client.py
src/: CMakeLists.txt  wrapped_sum.cpp  wrapped_sum.h
test/: CMakeLists.txt  test_sum.cpp
